<resources>

    <string name="app_name">Tokyo Rikiya</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_an_account_register_now">You do not have an account? Register now!</string>
    <string name="forgot_your_password_reset_it_now">Forgot your password? Reset it now!</string>
    <string name="title_activity_menu">blabla</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Reservations</string>
    <string name="title_notifications">About Us</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="there_are_3_basic_things_that_s_we_always_keep_in_mind_while_doing_our_business_the_safety_and_freshness_of_the_ingredients_the_environment_that_we_produce_the_food_in_and_not_the_last_the_quality_of_the_final_product_our_mission_is_to_give_you_the_chance_to_discover_a_bit_of_the_asian_culture_through_the_closest_version_of_the_japanese_cuisine_to_achieve_our_goals_those_3_aspects_must_be_always_fulfilled_keeping_the_highest_level_of_hygiene_possible_our_foods_are_conceived_to_reach_the_best_nutritional_value_for_a_healthy_and_strong_body_the_cuisines_prepared_by_our_japanese_chef_s_manage_to_embrace_the_image_flavors_and_style_of_the_original_foods_in_japan_so_please_explore_and_enjoy_the_real_taste_of_the_japanese_foods">There are 3 basic things that’s we always keep in mind while doing our business. The safety and freshness of the ingredients, the environment that we produce the food in and not the last, the quality of the final product. Our mission is to give you the chance to discover a bit of the Asian culture through the closest version of the Japanese cuisine. To achieve our goals those 3 aspects must be always fulfilled. Keeping the highest level of hygiene possible, our foods are conceived to reach the best nutritional value for a healthy and strong body. The cuisines prepared by our Japanese chef’s, manage to embrace the image, flavors and style of the original foods in Japan. So, please explore and enjoy the real taste of the Japanese foods!</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="tables">Tables</string>
    <string name="reservation">Reservation</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="our_food">Our food</string>
    <string name="table">Table</string>
    <string name="number_of_people">Number of people</string>
    <string name="book_a_table_now">Book a table now!</string>
    <string name="phone_number">Phone number</string>
    <string name="chef_toshihisa_shoji">Chef: Toshihisa Shoji</string>
    <string name="total">Total:</string>
    <string name="one_of_the_healthiest_and_most_special_cuisines_in_the_world_is_japanese_cuisine_so_delicate_and_refined_it_never_ceases_to_amaze_and_delight_with_the_flavor_and_exclusivity_of_its_dishes_our_chef_shoji_toshihisa_with_over_10_years_of_experience_in_restaurants_in_japan_prepares_daily_sushi_makizushi_chicken_teriaki_oyakodon_samurai_rice_ramen_soup_or_dishes_that_are_not_on_the_menu_but_that_you_have_tasted_in_japan_the_order_sushi_one_thing_well_known_by_lovers_of_japanese_cuisine_is_that_sushi_with_its_basic_ingredients_fish_and_rice_is_a_good_source_of_protein_carbohydrates_vitamins_and_minerals_the_low_fat_content_and_high_nutrient_intake_offered_by_this_dish_is_proof_longevity_of_the_inhabitants_of_the_land_of_the_rising_sun_to_prepare_this_wonderful_specialty_chefs_need_a_practice_of_over_2_years_starting_with_the_way_the_rice_is_washed_seasoned_and_cooked_all_complete_with_fish_selection_portioning_and_preparation_sushi_the_simple_but_at_the_same_time_sophisticated_preparation_of_the_japanese_has_been_conquering_the_whole_world_for_many_years_ramen_soup_with_millions_of_locations_in_japan_where_this_dish_can_be_served_ramen_soup_remains_in_the_top_of_the_preferences_of_japanese_who_are_not_shy_to_wait_in_line_in_front_of_a_ramen_shop_to_enjoy_a_good_port_of_noddles_with_soup_the_two_main_ingredients_are_pasta_noddles_preferably_fresh_and_soup_of_pork_chicken_or_seafood_seasoned_with_one_of_the_three_flavors_shyoyu_soy_sauce_miso_or_shio_salt_we_prepare_pasta_every_day_so_we_can_offer_you_the_ideal_ramen_with_chicken_soup_that_retains_its_intense_but_at_the_same_time_delicate_taste_along_with_cha_shu_slices_of_pork_egg_soy_sauce_and_high_secret_ingredients_the_time_required_to_prepare_this_soup_can_reach_up_to_10_hours_depending_on_the_type_of_meat_chosen_and_collagen_is_abundant_in_this_preparation_rice_with_meat_for_those_who_are_wondering_how_the_japanese_eat_pork_beef_or_chicken_we_offer_some_representative_dishes_for_japanese_cuisine_meat_sauces_are_based_on_shyoyu_soy_sauce_continuing_with_ginger_nutmeg_saffron_rosemary_garlic_onion_and_many_others_giving_the_final_dish_a_special_flavor_unheard_of_in_other_kitchens_we_are_waiting_for_you_to_discover_the_original_taste_of_japanese_gastronomy_now_closer_than_ever_to_the_constant_public">One of the healthiest and most special cuisines in the world is Japanese cuisine. So delicate and refined, it never ceases to amaze and delight with the flavor and exclusivity of its dishes. Our chef Shoji Toshihisa with over 10 years of experience in restaurants in Japan, prepares daily sushi, makizushi, chicken teriaki, oyakodon, samurai rice, ramen soup, or dishes that are not on the menu, but that you have tasted in Japan, the order. Sushi: One thing well known by lovers of Japanese cuisine is that sushi with its basic ingredients fish and rice, is a good source of protein, carbohydrates, vitamins and minerals. The low fat content and high nutrient intake offered by this dish is proof . longevity of the inhabitants of the Land of the Rising Sun. To prepare this wonderful specialty, chefs need a practice of over 2 years, starting with the way the rice is washed, seasoned and cooked, all complete with fish selection, portioning and preparation. Sushi, the simple but at the same time sophisticated preparation of the Japanese, has been conquering the whole world for many years. Ramen Soup: With millions of locations in Japan, where this dish can be served, ramen soup remains in the top of the preferences of Japanese, who are not shy to wait in line in front of a ramen shop, to enjoy a good port of noddles . with soup. The two main ingredients are pasta (noddles), preferably fresh and soup of pork, chicken or seafood, seasoned with one of the three flavors: Shyoyu (soy sauce), Miso or Shio (salt). We prepare pasta every day so we can offer you the ideal ramen, with chicken soup that retains its intense but at the same time delicate taste, along with cha-shu (slices of pork), egg, soy sauce and high secret ingredients. The time required to prepare this soup can reach up to 10 hours, depending on the type of meat chosen, and collagen is abundant in this preparation! Rice with Meat: For those who are wondering how the Japanese eat pork, beef or chicken, we offer some representative dishes for Japanese cuisine. Meat sauces are based on (shyoyu) soy sauce, continuing with ginger, nutmeg, saffron, rosemary, garlic, onion and many others giving the final dish a special flavor, unheard of in other kitchens! We are waiting for you to discover the original taste of Japanese gastronomy, now closer than ever to the constant public.\n</string>
    <string name="welcome">Welcome!</string>
    <string name="contact">Contact</string>

    <string-array name="dishes">
        <item>Makisushi Emperor 8 buc \n 480g</item>
        <item>Super sushi 8 buc \n 420g</item>
        <item>Makisushi wagyu 8 buc \n 450g</item>
        <item>Makisushi Chef Toshi 8 buc \n 450g</item>
        <item>Makisushi Olympic 8 buc \n 650g</item>
        <item>Makisushi Kabuki 8 buc  \n 600g</item>
        <item>Makisushi Bomba 8 buc  \n 450g</item>
        <item>Eel maki 8 buc  \n Chef Toshi </item>
        <item>Makisushi Shrimp Avocado-8 buc \n 530g</item>
        <item>Makisushi Salmon Avocado-8 buc \n 530g</item>
        <item>Makisushi Shrimp Salmon-8 buc \n 530g</item>


    </string-array>

    <string-array name="ingredients">
        <item>Continut: supa zilei, prime wagyu, arici de mare, trufe negru romaneasca, foie gras tempura, castraveti, avocado puree. Sos soja, wasabi, ghimbir murat</item>
        <item>Continut: supa zilei, creveti tempura, chives, castraveti, busioc prajit, ceapa prajit, doua fer de sosuri</item>
        <item>Continut: supa zilei, prime wagyu, castraveti, chives, ores marinat, sos wagyu</item>
        <item>Continut: supa zilei, eel,casteaveti, mango, foie gras tempoura</item>
        <item>supa zilei, salmon,Creveti,Ton, Crema de branza, casreaveti</item>
        <item>supa zilei, creveti, avocado, castraveti, miso mayonnaise sos, ice de somon</item>
        <item>supa zilei, prime Wagyu, foie gras, crunchy fried onion, chives, castraveti, sos spicy mayonnaise</item>
        <item>supa zilei, tipar, orez, ou, castraveti, sos de soia, wasabi, ghimbir</item>
        <item>supa zilei, creveti, avocado, orez, sos de soia, wasabi, gimbir, alge, supa zilei-530g</item>
        <item>supa zilei, somon, avocado, orez, sos de soia, wasabi, gimbir, alge, supa zilei-530g</item>
        <item>supa zilei, creveti, somon, orez, sos de soia, wasabi, gimbir, alge, supa zilei-530g</item>

    </string-array>

    <string-array name="price">

        <item>179,00 lei</item>
        <item>67,00 lei</item>
        <item>108,00 lei</item>
        <item>72,00 lei</item>
        <item>83,00 lei</item>
        <item>83,00 lei</item>
        <item>151,00 lei</item>
        <item>75,00 lei</item>
        <item>58,00 lei</item>
        <item>49,00 lei</item>
        <item>71,00 lei</item>

    </string-array>

</resources>