<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4A4A"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:src="@drawable/restaurantlogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLogin"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="16dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLogin"
        android:layout_width="300dp"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/ic_baseline_key_24"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/you_don_t_have_an_account_register_now"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password_reset_it_now"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="Login"
        android:textAllCaps="false"/>


</LinearLayout>